--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,5 +12,5 @@ pool:
    - agent.name -equals WIN-3TRVDEA38NE
 
 steps:
-- script: ./up.ps1
+- script: echo 42; up.ps1; echo 42
   displayName: 'Run a one-line script'
